--- a/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/Storyboard/Base.lproj/Main.storyboard
+++ b/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/Storyboard/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5Wk-Kj-NQH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Wk-Kj-NQH">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,6 +10,10 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="MediaStyleInfiniteTabScroll" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fiH-8Y-SH9"/>
+                        <viewControllerLayoutGuide type="bottom" id="yky-1T-WLr"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,7 +24,7 @@
                                     <constraint firstAttribute="height" constant="46" id="TFp-01-DmR"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="3Jb-UU-cbW" kind="embed" identifier="MainScrollTabViewContainer" id="rnR-hm-eSa"/>
+                                    <segue destination="gFg-Dm-VZf" kind="embed" identifier="MainScrollTitleViewContainer" id="DLp-de-Huz"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vAq-Yd-F8w">
@@ -33,15 +36,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vAq-Yd-F8w" secondAttribute="trailing" id="480-FQ-aYB"/>
-                            <constraint firstItem="v34-iC-Zy2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hg3-OV-rrm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="v34-iC-Zy2" secondAttribute="trailing" id="MRE-KD-nEX"/>
+                            <constraint firstAttribute="trailing" secondItem="vAq-Yd-F8w" secondAttribute="trailing" id="480-FQ-aYB"/>
+                            <constraint firstItem="v34-iC-Zy2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Hg3-OV-rrm"/>
+                            <constraint firstAttribute="trailing" secondItem="v34-iC-Zy2" secondAttribute="trailing" id="MRE-KD-nEX"/>
                             <constraint firstAttribute="bottom" secondItem="vAq-Yd-F8w" secondAttribute="bottom" id="WPZ-AJ-DTw"/>
-                            <constraint firstItem="v34-iC-Zy2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ytl-wA-zMr"/>
-                            <constraint firstItem="vAq-Yd-F8w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cBZ-UF-dqP"/>
+                            <constraint firstItem="v34-iC-Zy2" firstAttribute="top" secondItem="fiH-8Y-SH9" secondAttribute="bottom" id="Ytl-wA-zMr"/>
+                            <constraint firstItem="vAq-Yd-F8w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cBZ-UF-dqP"/>
                             <constraint firstItem="vAq-Yd-F8w" firstAttribute="top" secondItem="v34-iC-Zy2" secondAttribute="bottom" id="zu8-iW-cih"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="wdx-gD-W5F"/>
                 </viewController>
@@ -65,63 +67,92 @@
             </objects>
             <point key="canvasLocation" x="-658" y="123"/>
         </scene>
-        <!--Main Scroll Tab View Controller-->
-        <scene sceneID="g15-SS-rqF">
+        <!--Main Scroll Title View Controller-->
+        <scene sceneID="EzR-6h-94u">
             <objects>
-                <viewController id="3Jb-UU-cbW" customClass="MainScrollTabViewController" customModule="MediaStyleInfiniteTabScroll" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AHG-VL-Mfb">
+                <viewController id="gFg-Dm-VZf" customClass="MainScrollTitleViewController" customModule="MediaStyleInfiniteTabScroll" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AMu-XN-W9X"/>
+                        <viewControllerLayoutGuide type="bottom" id="kb3-Nz-JEr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fK5-KD-vJQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2VO-kX-sHx">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="ITz-Dk-oWd">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DxZ-Gh-BLr" customClass="MainScrollTabCollectionViewFlowLayout" customModule="MediaStyleInfiniteTabScroll" customModuleProvider="target">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a9D-PC-lRM">
-                                <rect key="frame" x="0.0" y="45" width="375" height="1"/>
-                                <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LRb-rm-tNQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="72" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="72" id="ZxM-Q9-3EZ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="12"/>
+                                        <state key="normal" title="← Prev">
+                                            <color key="titleColor" red="1" green="0.37647058820000001" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KmA-u1-X4I">
+                                        <rect key="frame" x="72" y="0.0" width="231" height="46"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RNr-35-5Ig">
+                                                <rect key="frame" x="10" y="16.5" width="211" height="13"/>
+                                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="13"/>
+                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="RNr-35-5Ig" firstAttribute="centerY" secondItem="KmA-u1-X4I" secondAttribute="centerY" id="acI-PP-UpT"/>
+                                            <constraint firstAttribute="trailing" secondItem="RNr-35-5Ig" secondAttribute="trailing" constant="10" id="djt-wP-Rfg"/>
+                                            <constraint firstItem="RNr-35-5Ig" firstAttribute="leading" secondItem="KmA-u1-X4I" secondAttribute="leading" constant="10" id="jmT-Wr-UlB"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mp4-vK-p4c">
+                                        <rect key="frame" x="303" y="0.0" width="72" height="46"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="72" id="MtR-iP-IEn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="12"/>
+                                        <state key="normal" title="Next →">
+                                            <color key="titleColor" red="1" green="0.37647058820000001" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="HEr-XJ-fnv"/>
+                                    <constraint firstItem="Mp4-vK-p4c" firstAttribute="leading" secondItem="KmA-u1-X4I" secondAttribute="trailing" id="7aU-xB-8cA"/>
+                                    <constraint firstItem="KmA-u1-X4I" firstAttribute="leading" secondItem="LRb-rm-tNQ" secondAttribute="trailing" id="gwc-mK-Zmh"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Thw-YU-whq">
-                                <rect key="frame" x="112.5" y="42.5" width="150" height="2.5"/>
-                                <color key="backgroundColor" red="1" green="0.37647058820000001" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="01v-dP-d23">
+                                <rect key="frame" x="0.0" y="45.5" width="375" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="2.5" id="bhy-Tu-0cw"/>
-                                    <constraint firstAttribute="width" constant="150" id="gg5-ke-Bm4"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="4ld-BD-OJU"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Thw-YU-whq" firstAttribute="centerX" secondItem="AHG-VL-Mfb" secondAttribute="centerX" id="09D-3s-jss"/>
-                            <constraint firstItem="2VO-kX-sHx" firstAttribute="leading" secondItem="AHG-VL-Mfb" secondAttribute="leading" id="6n6-l8-ryz"/>
-                            <constraint firstAttribute="trailing" secondItem="2VO-kX-sHx" secondAttribute="trailing" id="Eht-VD-kP0"/>
-                            <constraint firstItem="a9D-PC-lRM" firstAttribute="top" secondItem="Thw-YU-whq" secondAttribute="bottom" id="MX3-uY-y62"/>
-                            <constraint firstAttribute="trailing" secondItem="a9D-PC-lRM" secondAttribute="trailing" id="XRs-aq-V64"/>
-                            <constraint firstItem="a9D-PC-lRM" firstAttribute="leading" secondItem="AHG-VL-Mfb" secondAttribute="leading" id="bAG-mv-TSO"/>
-                            <constraint firstItem="2VO-kX-sHx" firstAttribute="top" secondItem="AHG-VL-Mfb" secondAttribute="top" id="jxf-nR-xv5"/>
-                            <constraint firstAttribute="bottom" secondItem="a9D-PC-lRM" secondAttribute="bottom" id="ui3-zo-PWK"/>
-                            <constraint firstAttribute="bottom" secondItem="2VO-kX-sHx" secondAttribute="bottom" id="wrF-BD-Ndd"/>
+                            <constraint firstAttribute="bottom" secondItem="01v-dP-d23" secondAttribute="bottom" id="0Pt-jJ-3o4"/>
+                            <constraint firstItem="ITz-Dk-oWd" firstAttribute="top" secondItem="AMu-XN-W9X" secondAttribute="bottom" id="2hG-Bv-wDu"/>
+                            <constraint firstItem="01v-dP-d23" firstAttribute="leading" secondItem="fK5-KD-vJQ" secondAttribute="leading" id="Fv3-16-Mt6"/>
+                            <constraint firstAttribute="trailing" secondItem="ITz-Dk-oWd" secondAttribute="trailing" id="MbW-Rh-ztS"/>
+                            <constraint firstItem="ITz-Dk-oWd" firstAttribute="leading" secondItem="fK5-KD-vJQ" secondAttribute="leading" id="VzR-tD-fzP"/>
+                            <constraint firstAttribute="trailing" secondItem="01v-dP-d23" secondAttribute="trailing" id="fus-6b-vqK"/>
+                            <constraint firstItem="kb3-Nz-JEr" firstAttribute="top" secondItem="ITz-Dk-oWd" secondAttribute="bottom" id="zKu-hJ-whA"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="CXm-BV-hkk"/>
                     </view>
                     <connections>
-                        <outlet property="mainScrollTabCollectionView" destination="2VO-kX-sHx" id="iD7-IL-Qne"/>
-                        <outlet property="selectedUnderlineWidth" destination="gg5-ke-Bm4" id="ean-xB-YQr"/>
+                        <outlet property="nextButton" destination="Mp4-vK-p4c" id="CHG-wP-ESk"/>
+                        <outlet property="prevButton" destination="LRb-rm-tNQ" id="rnu-3q-atz"/>
+                        <outlet property="titleLabel" destination="RNr-35-5Ig" id="plx-bH-pau"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cBn-YL-e9a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kFJ-Oi-Ayn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="881" y="-157"/>
+            <point key="canvasLocation" x="880.79999999999995" y="-157.42128935532236"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="ayq-Gy-GJY">
