--- a/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/Storyboard/Base.lproj/SemiModal.storyboard
+++ b/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/Storyboard/Base.lproj/SemiModal.storyboard
@@ -24,9 +24,19 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X8W-o6-1az">
                                 <rect key="frame" x="0.0" y="300" width="375" height="36"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="感謝の言葉" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1A-at-oDt">
+                                        <rect key="frame" x="154.5" y="11.5" width="66" height="13"/>
+                                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="EQM-gM-xXs"/>
+                                    <constraint firstItem="O1A-at-oDt" firstAttribute="centerX" secondItem="X8W-o6-1az" secondAttribute="centerX" id="ETN-3W-Llt"/>
+                                    <constraint firstItem="O1A-at-oDt" firstAttribute="centerY" secondItem="X8W-o6-1az" secondAttribute="centerY" id="v8Z-cX-3FN"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pk7-Tc-Lo5">
@@ -37,7 +47,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Pk7-Tc-Lo5" firstAttribute="top" secondItem="X8W-o6-1az" secondAttribute="bottom" id="1Jr-2y-dNT"/>
-                            <constraint firstItem="Pk7-Tc-Lo5" firstAttribute="bottom" secondItem="mG4-Ya-ePb" secondAttribute="bottom" id="2v8-fd-pl7"/>
+                            <constraint firstItem="Pk7-Tc-Lo5" firstAttribute="bottom" secondItem="WF3-HY-Or3" secondAttribute="bottom" id="2v8-fd-pl7"/>
                             <constraint firstItem="mG4-Ya-ePb" firstAttribute="trailing" secondItem="X8W-o6-1az" secondAttribute="trailing" id="7kq-uD-znX"/>
                             <constraint firstItem="X8W-o6-1az" firstAttribute="top" secondItem="wLf-Mg-jdk" secondAttribute="bottom" id="G4C-AY-T2a"/>
                             <constraint firstItem="Pk7-Tc-Lo5" firstAttribute="trailing" secondItem="mG4-Ya-ePb" secondAttribute="trailing" id="PbO-ZZ-rNp"/>
@@ -49,6 +59,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="mG4-Ya-ePb"/>
                     </view>
+                    <connections>
+                        <outlet property="semiModalBackgroundView" destination="wLf-Mg-jdk" id="NZ2-i8-n1d"/>
+                        <outlet property="semiModalHeaderView" destination="X8W-o6-1az" id="ovg-hP-27g"/>
+                        <outlet property="semiModalScrollView" destination="Pk7-Tc-Lo5" id="AKZ-3W-ELO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mhq-3x-BXV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
