第1章: データを利用した一覧表示の作成と準備

--- a/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/View/ListCollectionViewCell/ListCollectionViewCell.xib
+++ b/01_MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/MediaStyleInfiniteTabScroll/View/ListCollectionViewCell/ListCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -51,7 +51,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018.12.25" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARH-G5-KpL">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019.12.30" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARH-G5-KpL">
                                         <rect key="frame" x="0.0" y="38.5" width="134" height="19"/>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="10"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -89,7 +89,13 @@
                 <constraint firstItem="cGg-iI-Zts" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ryg-QF-saW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <point key="canvasLocation" x="132" y="151"/>
+            <connections>
+                <outlet property="catchcopyLabel" destination="u33-84-VTX" id="dcU-Bd-0bc"/>
+                <outlet property="categoryLabel" destination="Sps-R1-vFS" id="UtZ-u6-ybK"/>
+                <outlet property="thumbnailImageView" destination="SIG-aI-1i6" id="Cie-OW-G4T"/>
+                <outlet property="titleLabel" destination="WFw-ko-wIM" id="naR-Za-iKq"/>
+            </connections>
+            <point key="canvasLocation" x="131.19999999999999" y="150.22488755622189"/>
         </collectionViewCell>
     </objects>
 </document>
